[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charao"
version = "0.7.0"
description = "An open cell library characterizer by Python."
authors = [{ name = "LogicResearch K.K.(MATSUDA Masahiro)", email = "matsuda@logic-research.co.jp" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["charao","charao.script","charao.target"]

[tool.setuptools.package-data]
"charao.script" = ["temp_testbench.sp.jp2"]
"charao.target" = ["**/*"]

[project.scripts]
charao = "charao.charao:main"
