[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charao"
version = "0.8.1"
description = "An open cell library characterizer by Python."
authors = [{ name = "LogicResearch K.K.(MATSUDA Masahiro)", email = "matsuda@logic-research.co.jp" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["jsoncomment","pydantic","numpy","jinja2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["charao","charao.script"]

[tool.setuptools.package-data]
"charao.script" = ["temp_testbench.sp.jp2"]
"charao.target" = ["**/*"]

[project.scripts]
charao = "charao.charao:main"
